<resources>
   <!--修复使用textinputlayout无缘报错-->
        <item name="visible" type="id"/>
        <item name="masked" type="id"/>
    <string name="app_name">Book</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="inputaccount">请输入账号</string>
    <string name="inputpassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="toregister">没有账号？去注册</string>
    <string name="checkpassword">请再次输入你的密码</string>
    <string name="checkcode">验证码</string>
    <string name="register">注册</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="username">用户名</string>


    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <drawable name="clr_normal">@color/colorblue</drawable>
    <drawable name="clr_pressed">@color/colorPrimary</drawable>
</resources>
