<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/loginView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.book.view.LoginActivity"
    android:background="@drawable/loginbackgroud">
 <include layout="@layout/toolbar" />
    <Button
        android:id="@+id/login"
        style="@android:style/Widget.Button"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:background="@drawable/login_button_selector"
        android:text="@string/login"
        android:textColor="@color/colorwhite"
        android:textSize="25sp"
        android:layout_marginTop="67dp"
        android:layout_below="@+id/inputpassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/toregister"
        android:layout_width="170dp"
        android:layout_height="33dp"
        android:text="@string/toregister"
        android:textSize="20sp"
        android:textColor="@color/colororange"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputaccount"
        android:layout_width="245dp"
        android:layout_height="62dp"
        android:layout_below="@+id/include"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        tools:ignore="UnknownId">

        <EditText
            android:id="@+id/account"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="245dp"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="@string/inputaccount"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputpassword"
        android:layout_width="245dp"
        android:layout_height="62dp"
        android:layout_below="@+id/inputaccount"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="245dp"
            android:layout_height="53dp"
            android:ems="10"
            android:hint="@string/inputpassword"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>


</RelativeLayout>
