<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackgroud"
    tools:context="com.example.book.view.RegisterActivity"
>
<include layout="@layout/toolbar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/checkcodeView"
        android:layout_width="100dp"
        android:layout_height="43dp"
        android:contentDescription=""
        tools:ignore="ContentDescription"
        android:layout_alignTop="@+id/checkcodewrapper"
        android:layout_alignRight="@+id/register"
        android:layout_alignEnd="@+id/register"
        android:layout_marginRight="11dp"
        android:layout_marginEnd="11dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="218dp"
        android:layout_height="51dp"
        android:text="@string/register"
        android:textColor="@color/colorwhite"
        android:textSize="25sp"
        android:background="@drawable/login_button_selector"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/checkcodewrapper"
        android:layout_centerHorizontal="true" />


    <RadioGroup
        android:id="@+id/group"
        android:layout_width="235dp"
        android:layout_height="34dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignLeft="@+id/register"
        android:layout_alignStart="@+id/register">
            <RadioButton
                android:id="@+id/male"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colordarkbule"
                android:text="@string/male"
                android:textColor="@color/colordarkgray"
                android:textSize="20sp"
                tools:targetApi="lollipop" />

            <RadioButton
                android:id="@+id/female"
                style="@style/AlertDialog.AppCompat.Light"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colordarkbule"
                android:text="@string/female"
                android:textColor="@color/colordarkgray"
                android:textSize="20sp"
                tools:targetApi="lollipop"
                />
    </RadioGroup>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/linearLayout"
    android:layout_marginTop="110dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/accountwrapper"
        android:layout_width="match_parent"
        android:layout_height="62dp">

        <EditText
            android:id="@+id/account"
            android:layout_width="250dp"
            android:layout_height="51dp"
            android:hint="@string/account"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernamewrapper"
        android:layout_width="match_parent"
        android:layout_height="62dp"
       >

        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="51dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
           />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordwrapper"
        android:layout_width="wrap_content"
        android:layout_height="62dp">
        <EditText
            android:id="@+id/password"
            android:layout_width="245dp"
            android:layout_height="55dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/paswrdchkwrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
   >

        <EditText
            android:id="@+id/passwordcheck"
            android:layout_width="250dp"
            android:layout_height="51dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/checkpassword"
            android:inputType="textPassword"
        />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/checkcodewrapper"
        android:layout_width="101dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/group"
        android:layout_alignLeft="@+id/group"
        android:layout_alignStart="@+id/group">

        <EditText
            android:id="@+id/checkcode"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/register"
            android:layout_alignStart="@+id/register"
            android:layout_alignTop="@+id/group"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:hint="@string/checkcode"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="RtlHardcoded" />
    </android.support.design.widget.TextInputLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
